spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@
 
   .nav-container {
     margin-left: 20px;
-    height: 150px;
+    height: 200px;
     display: flex;
     align-items: center; 
   }
@@ -104,7 +104,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    margin-top: 40px;
+    margin-top: 0px;
   }
 
   .nav-item {
@@ -161,6 +161,7 @@
     overscroll-behavior-y: none;
     color: rgb(255, 255, 240);
     scrollbar-width: none;
+    padding-top: 20px;
   }
 
   .education-content {
@@ -374,6 +375,7 @@
 
   .content {
     margin-top: 0px;
+    padding-top: 0px;
     width: 85vw;
     height: 100%;
     margin-left: 5vw;
